makefile and script organization
